Add link to roboptim libraries.

--- a/configure.ac
+++ b/configure.ac
@@ -72,7 +72,9 @@ PKG_CHKADDDPD(HRP2DYNAMICS,		hrp2Dynamics)
 PKG_CHKADDDPD(HPPWALKPLANNERCOMPSPEC,	hppWalkPlannerCompSpec)
 PKG_CHKADDDPD(WALKPLANNERORTM,		walkPlannerOrtm)
 PKG_CHKADDDPD(WALKPLANNERORTMCLIENT,	walkPlannerOrtmClient)
-PKG_CHKADDDPD(LIBOPTIMIZATION,		liboptimization)
+PKG_CHKADDDPD(ROBOPTIMCORE,		roboptim-core)
+PKG_CHKADDDPD(ROBOPTIMPOSTURE,		roboptim-posture)
+PKG_CHKADDDPD(ROBOPTIMTRAJECTORY,	roboptim-trajectory)
 
 PKG_CHKADDDPD(WALKGENOM,		walk-genom, walk)
 
