--- a/configure.ac
+++ b/configure.ac
@@ -29,8 +29,8 @@ m4_define([PKG_CHKADDDPD],[
   else
     AC_SUBST($1[]_PREFIX,$pkgprefix_[]$1)
 # once all packages will export their docdir in pkgconfig:
-#   AC_SUBST($1[]_DOCDIR,`$PKG_CONFIG --variable=docdir "$2" 2>/dev/null`)
-    AC_SUBST($1[]_DOCDIR,$$1[]_PREFIX/share/doc/$2)
+    AC_SUBST($1[]_DOCDIR,`$PKG_CONFIG --variable=docdir "$2" 2>/dev/null`)
+#   AC_SUBST($1[]_DOCDIR,$$1[]_PREFIX/share/doc/$2)
     if test -n "$pkg_list"; then pkg_list="$pkg_list $2"; else pkg_list="$2"; fi
     AC_MSG_RESULT([yes])
   fi[]dnl
@@ -75,6 +75,7 @@ PKG_CHKADDDPD(WALKPLANNERORTMCLIENT,	walkPlannerOrtmClient)
 PKG_CHKADDDPD(ROBOPTIMCORE,		roboptim-core)
 PKG_CHKADDDPD(ROBOPTIMPOSTURE,		roboptim-posture)
 PKG_CHKADDDPD(ROBOPTIMTRAJECTORY,	roboptim-trajectory)
+PKG_CHKADDDPD(SOT,			stackoftasks)
 
 PKG_CHKADDDPD(WALKGENOM,		walk-genom, walk)
 
