--- a/doc/html/algorithm.html.in
+++ b/doc/html/algorithm.html.in
@@ -7,7 +7,7 @@
 
 <h1>Packages implementing algorithms</h1>
 
-<h3>Dynamics</h3>
+<h3>Dynamics and Control</h3>
 
 <table>
   <tr><td width="20"></td><td><a href="@ABSTRACTROBOTDYNAMICS_DOCDIR@/html/main.html">abstractRobotDynamics</a>: </td><td> abstract interface for robot dynamic model</td></tr>
@@ -16,6 +16,9 @@
   <tr><td width="20"></td><td><a href="@ABSTRACTGIKTASK_DOCDIR@/html/main.html">abstractGikTask</a>: </td><td> Abstract interface for whole body motion planning.</td></tr>
   <tr><td width="20"></td><td><a href="@HPPGIK_DOCDIR@/html/main.html">hppGik</a>: </td><td> Implementation of whole body motion planning.</td></tr>
   <tr><td width="20"></td><td><a href="@HRP2DYNAMICS_DOCDIR@/html/main.html">hrp2Dynamics</a>: </td><td> Optimized dynamic model for HRP2.</td></tr>
+  <tr><td></td></tr>
+  <tr><td width="20"></td><td><a href="@SOT_DOCDIR@/html/main.html">StackOfTasks</a>: </td><td> Humanoid motion control through prioritized tasks.</td></tr>
+
 </table>
 
 <h3>roboptim: optimization for robotics</h3>
