Install missing file.
	* doc/Makefile.am: install stackoftasks/html/main.html. This file is
	pointed out by the algorithm page when stackoftasks is not installed.
	* doc/html/algorithm.html.in: remove useless line in table.

Signed-off-by: florent <Florent Lamiraux florent@laas.fr>

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -117,7 +117,8 @@ nobase_dist_hppDoc_DATA+= \
 	walkPlannerOrtmClient/main.html		\
 	roboptim-core/html/main.html		\
 	roboptim-posture/html/main.html		\
-	roboptim-trajectory/html/main.html			
+	roboptim-trajectory/html/main.html	\
+	stackoftasks/html/main.html
 
 hppDocPictdir = $(datadir)/doc/hppDoc/pictures
 
