--- a/doc/html/hppdoc_howtoinstall.html.in
+++ b/doc/html/hppdoc_howtoinstall.html.in
@@ -54,9 +54,12 @@ To download, compile and install packages not managed by <code>robotpkg</code>, 
 [devel] cd src
 </pre></div> Then download the packages you need <div class="fragment"><pre class="fragment">[src] git-clone git+ssh:<span class="comment">//[git|softs].laas.fr/git/jrl/name-of-package</span>
 </pre></div><p>
-Each package (managed by <code>robotpkg</code> or not) installs a file with extension <code>.pc</code> in <code>prefix/lib/pkgconfig</code> where <code>prefix</code> is the installation prefix of the package. This file stores information about the package and its dependencies. This information is retrieved by <code>pkg-config</code> executable. <code>pkg-config</code> searches for <code>.pc</code> files in paths encoded in <code>PKG_CONFIG_PATH</code> environment variable. You need therefore to set this variable correctly, for instance: <div class="fragment"><pre class="fragment">[devel] setenv PKG_CONFIG_PATH ${HOME}/devel/lib/pkgconfig:${HOME}/openrobots/lib/pkgconfig:/usr/local/lib/pkgconfig
+Each package (managed by <code>robotpkg</code> or not) installs a file with extension <code>.pc</code> in <code>prefix/lib/pkgconfig</code> where <code>prefix</code> is the installation prefix of the package. This file stores information about the package and its dependencies. This information is retrieved by <a href="hppdoc_autotools.html#hppDoc_pkg_config"><code>pkg-config</code></a> executable. 
+<code>pkg-config</code> searches for <code>.pc</code> files in paths encoded in <code>PKG_CONFIG_PATH</code> environment variable. You need therefore to set this variable correctly, for instance: <div class="fragment"><pre class="fragment">[devel] setenv PKG_CONFIG_PATH ${HOME}/devel/lib/pkgconfig:${HOME}/openrobots/lib/pkgconfig:/usr/local/lib/pkgconfig
 </pre></div><p>
-Compile and install the packages in your development directory <div class="fragment"><pre class="fragment">[src] cd <span class="keyword">package</span>
+Compile and install the packages in your development directory 
+<div class="fragment"><pre class="fragment">
+[src] cd <span class="keyword">package</span>
 <span class="keyword"></span>[package] ./bootstrap (or ./autogen.sh)
 [package] mkdir _build
 [package] cd _build
@@ -64,7 +67,27 @@ Compile and install the packages in your development directory <div class="fragm
 [build] make 
 [build] make install
 </pre></div>
-Notice that in most packages, a local script (or <code>autogen.sh</code>) performs <code>libtoolize</code> to <code>automake</code> above commands.
+
+<h3><a class="anchor" name="hppDoc_important_rules">
+Important installation rules
+</a></h3>
+
+As explained above, releases of stable packages are installed by <code>robotpkg</code> in <code>${HOME}/openrobots</code> prefix, while unstable packages are installed by hand in <code>${HOME}/devel</code> prefix.
+<p></p>
+It is very important that in the <a href="graph-dependency.html">dependency tree</a>, a package installed by <code>robotpkg</code> never depends on a package installed by hand in <code>${HOME}/devel</code> prefix.
+<code>robotpkg</code> indeed automatically installs required dependencies and would be confused if the dependency of a package it is trying to install was already installed in <code>${HOME}/devel</code>.
+<p></p>
+You should therefore be very careful when switching a package from an unstable version to a release. You should first uninstall the dependencies of this package from <code>${HOME}/devel</code>:
+
+<div class="fragment"><pre class="fragment">
+[~] cd ${HOME}/devel
+[devel] rm -rf share/doc/package
+[devel] rm -rf include/package
+[devel] rm -f lib/libpackage*
+[devel] rm -f lib/pkgconfig/package.pc
+</pre></div>
+
+
 <h3><a class="anchor" name="hppDoc_omniORB">
 Configuring CORBA and using hppCorbaServer</a></h3>
 <code>hppCorbaServer</code> is a package that enables developers to run their algorithms from external application like python scripts for instance. This package instanciates a 3 CORBA objects that can handle requests trigerring actions in HPP. The CORBA objects correspond to the following interfaces: <ul>
