Package pkg.m4 macro file to enhance package robustness.
	* Makefile.am: Search for macro in build-aux, fix copyright year.
	* build-aux/pkg.m4: New.
	* configure.ac: Clean and register build-aux as an auxiliary directory.
	Homogenize style with package-create.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,11 @@
 #
-#  Copyright 2008
+#  Copyright 2008, 2009
 #      IS/AIST-ST2I/CNRS Joint Japanese-French Robotics Laboratory (JRL).
 # All rights reserved.
 #
+
+# Search for autoconf macros in build-aux.
+ACLOCAL_AMFLAGS = -I build-aux
 
 SUBDIRS = \
 	doc
