--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
+INSTALL
 Makefile.in
+_build*
 aclocal.m4
-autom4te.cache
+autom4te.cache/
 configure
-install-sh
-missing
+doc/Makefile.in
++committed/
+,*
+*~
