Clean properly generated dot file.
	* doc/Makefile.am: Add graphDep.dot to CLEANFILES so
	that ``make distcheck'' does not fail.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -70,7 +70,7 @@ hppDoc_DATA=\
 	html/corba.html			\
 	html/index.html			\
 	html/kppInterface.html		\
-	html/roboticComponent.html 	
+	html/roboticComponent.html
 
 # the list of pages that explain how to install a package if it is not
 # installed yet. These pages are replaced (in the above templates) by a
@@ -124,3 +124,6 @@ hppDocPictdir = $(datadir)/doc/hppDoc/pictures
 
 hppDocPict_DATA= \
 	html/pictures/dependencies.png
+
+CLEANFILES =				\
+	graphDep.dot
