--- a/configure.ac
+++ b/configure.ac
@@ -73,7 +73,9 @@ PKG_CHKADDDPD(KPPINTERFACEWALK, 	kppInterfaceWalk)
 PKG_CHKADDDPD(KPPINTERFACEHRP, 		kppInterfaceHRP)
 PKG_CHKADDDPD(KPPINTERFACECMP, 		kppInterfaceCmp)
 PKG_CHKADDDPD(HPPGIK, 			hppGik)
+PKG_CHKADDDPD(HPPHIK, 			hpphik)
 PKG_CHKADDDPD(HPPLOA, 			hppLoa)
+PKG_CHKADDDPD(HPPLOCALSTEPPER, 		hpplocalstepper)
 PKG_CHKADDDPD(HPPLOAPLANNER,		hppLoaPlanner)
 PKG_CHKADDDPD(HPPTIMINGPLANNER, 	hppTimingPlanner)
 PKG_CHKADDDPD(DYNAMICSJRLJAPAN,		dynamicsJRLJapan)
