Adapt to roboptim singularity: html doc is installed in doxygen-html.

--- a/doc/html/algorithm.html.in
+++ b/doc/html/algorithm.html.in
@@ -24,9 +24,9 @@
 
 <h3>roboptim: optimization for robotics</h3>
 <table>
-  <tr><td width="20"></td><td><a href="@ROBOPTIMCORE_DOCDIR@/html/main.html">core</a>: </td><td>Common API for several numerical optimization packages</td></tr>
-  <tr><td width="20"></td><td><a href="@ROBOPTIMPOSTURE_DOCDIR@/html/main.html">posture</a>: </td><td>Cost and constraints relative to (humanoid) robots</td></tr>
-  <tr><td width="20"></td><td><a href="@ROBOPTIMTRAJECTORY_DOCDIR@/html/main.html">trajectory</a>: </td><td>Trajectory optimization</td></tr>
+  <tr><td width="20"></td><td><a href="@ROBOPTIMCORE_DOCDIR@/doxygen-html/main.html">core</a>: </td><td>Common API for several numerical optimization packages</td></tr>
+  <tr><td width="20"></td><td><a href="@ROBOPTIMPOSTURE_DOCDIR@/doxygen-html/main.html">posture</a>: </td><td>Cost and constraints relative to (humanoid) robots</td></tr>
+  <tr><td width="20"></td><td><a href="@ROBOPTIMTRAJECTORY_DOCDIR@/doxygen-html/main.html">trajectory</a>: </td><td>Trajectory optimization</td></tr>
 </table>
 
 <h3>Motion planning for humanoid systems</h3>
