--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,17 @@ Makefile.in
 _build*
 aclocal.m4
 autom4te.cache/
+config.h.in
+config.h.in~
 configure
 doc/Makefile.in
+src/Makefile.in
+tests/Makefile.in
+tests/testsuite
+tests/corba-tests/testsuite
 +committed/
 ,*
-*~
+testsuite.log
+*.pyc
+.version
+.tarball-version
