--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "scripts"]
 	path = scripts
 	url = ../../robots/scripts
+[submodule "build-aux"]
+	path = build-aux
+	url = roboptim:build-aux.git
