Make package dependencies image click-able.
	* doc/Makefile.am: Generate and install click-able image
	for package dependencies.
	* doc/graph-dependency.html.in: Rename from doc/graph-dependency.html.
	* scripts: Update to new version of packageDep.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -34,7 +34,6 @@ DOC_EXTRA =				\
 	doxygen.css			\
 	figures/archi.png		\
 	figures/kppInterfaceWalk.png	\
-	graph-dependency.html		\
 	movies/passing-under.mp4	\
 	movies/whole-body.mp4		\
 	pictures/dependencies.png	\
@@ -76,4 +75,17 @@ nobase_html_DATA =			\
 
 nobase_html_DATA += $(MISSING_FILES) $(DOC_EXTRA)
 
-EXTRA_DIST += $(DOC_EXTRA)
+EXTRA_DIST += $(DOC_EXTRA)		\
+	graph-dependency.html.in
+
+# Graph dependency.
+# Replace the special tag ``@MAP@'' by the dot generated map.
+graphDep.html: graphDep.dot
+	dot -o graphDep.html -Tcmapx graphDep.dot
+
+graph-dependency.html: graph-dependency.html.in graphDep.html
+	MAP=`tr -d '\n' < graphDep.html`; \
+	sed "s|@MAP@|$$MAP|" "$<" > $@
+
+CLEANFILES +=				\
+	cmaxp.html
